Fix tool status updates, add cmd+o, fix some layout issues

--- a/src/client/ui/map-editor-sidebar/map-editor-sidebar.scss
+++ b/src/client/ui/map-editor-sidebar/map-editor-sidebar.scss
@@ -67,6 +67,7 @@
         border-radius: 5px;
         height: 20px;
         padding: 2px 5px;
+        min-width: 100px;
     }
 
     .map-editor-sidebar-close-button {
